--- a/scss/core/_code.scss
+++ b/scss/core/_code.scss
@@ -35,19 +35,16 @@ kbd {
 // Blocks of code
 pre {
     display: block;
-    padding: $pre-padding;
     margin-top: 0;
     margin-bottom: 1rem;
     font-size: $code-font-size;
     color: $pre-color;
-    background-color: $pre-bg;
-    border: $border-width solid $pre-border-color;
 
     // Account for some code outputs that place code tags in pre tags
     code {
         padding: 0;
         font-size: inherit;
-        color: $code-color;
+        color: inherit;
         background-color: transparent;
         border-radius: 0;
     }
