dropdown: reduce hover states

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -658,6 +658,7 @@ $dropdown-link-active-bg:       $active-bg !default;
 $dropdown-link-active-hover-bg: $active-hover-bg !default;
 
 $dropdown-link-disabled-color:  $uibase-400 !default;
+$dropdown-link-disabled-bg:     transparent !default;
 
 $dropdown-item-padding-x:       1.25rem !default;
 $dropdown-item-padding-y:       .1875rem !default;
