--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -81,33 +81,21 @@
 }
 .dropdown-menu {
     // Active state
-    > .active > a {
+    > li.active > a {
         color: $dropdown-link-active-color;
         text-decoration: none;
         background-color: $dropdown-link-active-bg;
-
-        @include hover-focus {
-            color: $dropdown-link-active-color;
-            text-decoration: none;
-            background-color: $dropdown-link-active-hover-bg;
-        }
     }
 
     // Disabled state
     // Gray out text and ensure the hover/focus state remains gray
-    > .disabled > a {
-        @include plain-hover-focus {
-            color: $dropdown-link-disabled-color;
-        }
-
-        // Nuke hover/focus effects
-        @include hover-focus {
-            text-decoration: none;
-            cursor: $cursor-disabled;
-            background-color: transparent;
-            background-image: none; // Remove CSS gradient
-            @include reset-filter();
-        }
+    > li.disabled > a {
+        color: $dropdown-link-disabled-color;
+        text-decoration: none;
+        cursor: $cursor-disabled;
+        background-color: $dropdown-link-disabled-bg;
+        background-image: none; // Remove CSS gradient
+        @include reset-filter();
     }
 }
 
