--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -411,7 +411,7 @@ input[type="search"] {
 output {
     display: inline-block;
     // font-size: $font-size-base;
-    // line-height: $line-height;
+    // line-height: $line-height-base;
     // color: $input-color;
 }
 
