give mark from space

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -292,6 +292,7 @@ $text-dark-hover:   rgba(0,0,0,1) !default;
 
 $abbr-border-color: $uibase-400 !default;
 
+$mark-padding-x:    .25rem !default;
 $mark-bg:           #ff0 !default;
 
 $hr-border-color:   rgba(0,0,0,.1) !default;
