--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -365,6 +365,20 @@ $component-sizes: (
     )
 ) !default;
 
+
+// Transitions
+// =====
+// Widget animations
+$transition-fade:       opacity .15s linear !default;
+$transition-collapse-y: height .3s ease !default;
+$transition-collapse-x: width .3s ease !default;
+
+// Component transitions
+$btn-transition:        all .15s ease-in-out !default;
+$input-transition:      border-color ease-in-out .15s, box-shadow ease-in-out .15s !default;
+$modal-transition:      transform .3s ease-out !default;
+
+
 // Radius utility
 // =====
 $radius-border-radius: $border-radius !default;
