--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -78,6 +78,7 @@
     background-size: $custom-control-indicator-bg-size;
     border: $custom-control-indicator-border-width solid $custom-control-indicator-border-color;
     @include box-shadow($custom-control-indicator-box-shadow);
+    @include transition($input-transition);
 }
 
 // Checkboxes
@@ -144,6 +145,7 @@
     background-size: $custom-select-indicator-size;
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
+    @include transition($input-transition);
     appearance: none;
 
     &:focus {
@@ -259,6 +261,7 @@
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
     @include box-shadow($input-box-shadow);
+    @include transition($input-transition);
 
     @each $lang, $text in map-get($custom-file-text, placeholder) {
         &:lang(#{$lang})::after {
@@ -307,7 +310,7 @@
 
     @include border-radius($input-border-radius);
     @include box-shadow($input-box-shadow);
-    @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+    @include transition($input-transition);
 
     @include form-control-focus();
 }
