fix focus ring removal from checkbox/radio

--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -194,7 +194,11 @@ textarea.form-control {
     }
 
     &:focus {
-        @include focus-ring();
+        @if $enable-focus-ring {
+            @include focus-ring();
+        } @else {
+            @include focus-outline();
+        }
     }
 }
 
