--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -770,6 +770,7 @@ $jumbotron-breakpoint:      sm !default;
 // =====
 $badge-color:               $white !default;
 $badge-bg:                  $uibase-400 !default;
+$badge-hover-bg:            $uibase-500 !default;
 $badge-link-hover-color:    $white !default;
 $badge-font-size:           75% !default;
 $badge-font-weight:         $font-weight-bold !default;
@@ -783,7 +784,7 @@ $badge-pill-padding-x:      .5em !default;
 // customizing padding or font-size on badges.
 $badge-pill-border-radius:  10rem !default;
 
-$badge-outline-background:       transparent !default;
+$badge-outline-bg:          transparent !default;
 $badge-outline-link-hover-color: $white !default;
 
 
