alert - recolor and add more color util generation

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -124,6 +124,7 @@ $level-control-hover-bg:     650 !default;
 $level-control-hover-border: 700 !default;
 $level-context-bg:           80 !default;
 $level-context-border:       300 !default;
+$level-context-hover-color:  600 !default;
 $level-context-hover-border: 550 !default;
 
 // Process brand colors
