--- a/scss/functions/_color-util.scss
+++ b/scss/functions/_color-util.scss
@@ -48,6 +48,7 @@
         $context-bg:            palette($color, $level-context-bg);
         $context-border:        palette($color, $level-context-border);
         $context-hover-color:   palette($color, $level-context-hover-color);
+        $context-hover-bg:      palette($color, $level-context-hover-bg);
 
 
         // Build new map
@@ -61,7 +62,8 @@
             "context-color": $context-color,
             "context-bg": $context-bg,
             "context-border": $context-border,
-            "context-hover-color": $context-hover-color
+            "context-hover-color": $context-hover-color,
+            "context-hover-bg": $context-hover-bg
         );
         // Merge into theme map
         $result: map-merge($result, ($theme: $new-map));
