--- a/scss/mixins/_lists.scss
+++ b/scss/mixins/_lists.scss
@@ -7,10 +7,10 @@
 }
 
 // List Groups
-@mixin list-group-item-variant($state, $background, $color) {
+@mixin list-group-item-variant($state, $bg, $color, $hover-bg) {
     .list-group-item-#{$state} {
         color: $color;
-        background-color: $background;
+        background-color: $bg;
     }
 
     a.list-group-item-#{$state},
@@ -23,7 +23,7 @@
 
         @include hover-focus {
             color: $color;
-            background-color: darken($background, 5%);
+            background-color: $hover-bg;
         }
 
         &.active {
