--- a/scss/mixins/_tables.scss
+++ b/scss/mixins/_tables.scss
@@ -1,27 +1,25 @@
 // Tables
-@mixin table-row-variant($state, $background) {
+@mixin table-row-variant($state, $bg, $hover-bg) {
     // Exact selectors below required to override `.table-striped` and prevent
     // inheritance to nested tables.
     .table-#{$state} {
         &,
         > th,
         > td {
-            background-color: $background;
+            background-color: $bg;
         }
     }
 
     // Hover states for `.table-hover`
     // Note: this is not available for cells or rows within `thead` or `tfoot`.
     .table-hover {
-        $hover-background: darken($background, 5%);
-
         .table-#{$state} {
             @include hover {
-                background-color: $hover-background;
+                background-color: $hover-bg;
 
                 > td,
                 > th {
-                    background-color: $hover-background;
+                    background-color: $hover-bg;
                 }
             }
         }
