--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -17,7 +17,7 @@
 
         <hr />
 
-        <strong>Funding generously provided by:</strong>
+        <p class="font-weight-bold mb-0_25">Funding generously provided by:</p>
         <div class="media footer-partners">
             <div class="media-left">
                 <img src="{{ site.baseurl }}/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
