--- a/scss/mixins/_breakpoints.scss
+++ b/scss/mixins/_breakpoints.scss
@@ -2,7 +2,7 @@
 //
 // Breakpoints are defined as a map of (name: minimum width), order from small to large:
 //
-//    (xs: 0, sm: 576px, md: 768px)
+//    (xs: 0, sm: 36em, md: 48em, lg: 62em, xl: 75em)
 //
 // The map defined in the `$grid-breakpoints` global variable is used as the `$breakpoints` argument by default.
 
@@ -10,9 +10,9 @@
 //
 //    >> breakpoint-prev(sm)
 //    xs
-//    >> breakpoint-prev(sm, (xs: 0, sm: 576px, md: 768px))
+//    >> breakpoint-prev(sm, (xs: 0, sm: 36em, md: 48em, lg: 62em, xl: 75em))
 //    xs
-//    >> breakpoint-prev(sm, $breakpoint-names: (xs sm md))
+//    >> breakpoint-prev(sm, $breakpoint-names: (xs sm md lg xl))
 //    xs
 @function breakpoint-prev($name, $breakpoints: $grid-breakpoints, $breakpoint-names: map-keys($breakpoints)) {
     $n: index($breakpoint-names, $name);
@@ -23,9 +23,9 @@
 //
 //    >> breakpoint-next(sm)
 //    md
-//    >> breakpoint-next(sm, (xs: 0, sm: 576px, md: 768px))
+//    >> breakpoint-next(sm, (xs: 0, sm: 36em, md: 48em, lg: 62em, xl: 75em))
 //    md
-//    >> breakpoint-next(sm, $breakpoint-names: (xs sm md))
+//    >> breakpoint-next(sm, $breakpoint-names: (xs sm md lg xl))
 //    md
 @function breakpoint-next($name, $breakpoints: $grid-breakpoints, $breakpoint-names: map-keys($breakpoints)) {
     $n: index($breakpoint-names, $name);
@@ -34,8 +34,8 @@
 
 // Minimum breakpoint width. Null for the smallest (first) breakpoint.
 //
-//    >> breakpoint-min(sm, (xs: 0, sm: 576px, md: 768px))
-//    576px
+//    >> breakpoint-min(sm, (xs: 0, sm: 36em, md: 48em, lg: 62em, xl: 75em))
+//    36em
 @function breakpoint-min($name, $breakpoints: $grid-breakpoints) {
     $min: map-get($breakpoints, $name);
     @return if($min != 0, $min, null);
@@ -44,8 +44,8 @@
 // Maximum breakpoint width. Null for the largest (last) breakpoint.
 // The maximum value is calculated as the minimum of the next one less 1.
 //
-//    >> breakpoint-max(sm, (xs: 0, sm: 576px, md: 768px))
-//    767px
+//    >> breakpoint-max(sm, (xs: 0, sm: 36em, md: 48em, lg: 62em, xl: 75em))
+//    47.9375em
 @function breakpoint-max($name, $breakpoints: $grid-breakpoints) {
     $next: breakpoint-next($name, $breakpoints);
     //@return if($next, breakpoint-min($next, $breakpoints) - 1px, null);
