add flexbox to cards and tweak header spacing

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -829,6 +829,9 @@ $card-link-hover-color:    $white !default;
 
 $card-padding-y:           1rem !default;
 $card-padding-x:           1rem !default;
+$card-cap-padding-y:       .75rem !default;
+$card-cap-padding-x:       1rem !default;
+
 $card-img-overlay-padding: $card-padding-y $card-padding-x !default;
 
 $card-deck-breakpoint:      sm !default;
