--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -5,7 +5,9 @@
 @import "utilities/float";
 @import "utilities/gridline";
 @import "utilities/border";
+@import "utilities/position";
 @import "utilities/screen-reader";
+@import "utilities/sizing";
 @import "utilities/spacing";
 @import "utilities/text";
 @import "utilities/valign";
