update use of navbar classes and z-index doc

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-full navbar-dark cf-header">
+<header class="navbar navbar-dark cf-header">
     <div class="container">
         <nav>
             <a class="navbar-brand" href="{{ site.baseurl }}/">CAST Figuration</a>
