--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -253,10 +253,10 @@
     height: auto !important;
 }
 
-.player-unstarted .video-responsive:hover {
+.player-unstarted .embed-responsive:hover {
     cursor: pointer;
 }
-.player-unstarted .video-responsive:after {
+.player-unstarted .embed-responsive:after {
     display: inline-block;
     position: absolute;
     top: 50%;
@@ -277,7 +277,7 @@
     opacity: 0.75;
     pointer-events: none;
 }
-.player-unstarted .video-responsive:hover:after {
+.player-unstarted .embed-responsive:hover:after {
     filter: alpha(opacity=100);
     opacity: 1;
 }
