--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -16,26 +16,26 @@
             {% endif %}
             <div class="collapse navbar-toggleable-md" id="cf-topnav">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item {% if page.group == "get-started" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/get-started/quick-start/" class="nav-link">Get Started</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/get-started/quick-start/" class="nav-link {% if page.group == "get-started" %}active{% endif %}">Get Started</a>
                     </li>
-                    <li class="nav-item {% if page.group == "layout" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/layout/overview/" class="nav-link">Layout</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/layout/overview/" class="nav-link {% if page.group == "layout" %}active{% endif %}">Layout</a>
                     </li>
-                    <li class="nav-item {% if page.group == "content" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/content/reboot/" class="nav-link">Content</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/content/reboot/" class="nav-link {% if page.group == "content" %}active{% endif %}">Content</a>
                     </li>
-                    <li class="nav-item {% if page.group == "components" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/components/alerts/" class="nav-link">Components</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/components/alerts/" class="nav-link {% if page.group == "components" %}active{% endif %}">Components</a>
                     </li>
-                    <li class="nav-item {% if page.group == "utilities" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/utilities/borders/" class="nav-link">Utilities</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/utilities/borders/" class="nav-link {% if page.group == "utilities" %}active{% endif %}">Utilities</a>
                     </li>
-                    <li class="nav-item {% if page.group == "widgets" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/widgets/overview/" class="nav-link">Widgets</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/widgets/overview/" class="nav-link {% if page.group == "widgets" %}active{% endif %}">Widgets</a>
                     </li>
-                    <li class="nav-item {% if page.group == "about" %}active{% endif %}">
-                        <a href="{{ site.baseurl }}/about/overview/" class="nav-link">About</a>
+                    <li class="nav-item">
+                        <a href="{{ site.baseurl }}/about/overview/" class="nav-link {% if page.group == "about" %}active{% endif %}">About</a>
                     </li>
                     {% unless site.github %}
                     <li class="nav-item float-lg-right">
