--- a/scss/component/_nav.scss
+++ b/scss/component/_nav.scss
@@ -71,7 +71,7 @@
         margin-left: $nav-item-inline-spacer;
     }
 }
-if $enable-flex-full {
+@if $enable-flex-full {
     .nav-inline {
         flex-flow: row wrap;
     }
