Allow validation states on some custom form items

--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -17,7 +17,9 @@
         color: $color;
     }
     // Set the border and box shadow on specific inputs to match
-    .form-control {
+    .form-control,
+    .custom-select,
+    .custom-file-control {
         border-color: $border;
 
         &:focus {
